--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,11 @@
 [class*='col']{
     border: 1px solid black; 
     min-height: 100px;
+    text-align: center;
+    line-height: 100px;
 }
 
 /**UTILS */
-
-[class*='col']{
-    text-align: center;
-}
 
 .bg-red{
     background-color: lightcoral;
